<resources>
    <string name="app_name">Music Library</string>
    <string name="playlist">Playlist</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="payment">Payment</string>
    <string name="recently_added">Recently Added</string>
    <string name="most_played">Most Played</string>
    <string name="recently_played">Recently Played</string>
    <string name="favorites">Favorites</string>
    <string name="playlist1">90\'s HipHop</string>
    <string name="playlistTracks1">66 Tracks</string>
    <string name="playlist2">Old School HipHop</string>
    <string name="playlistTracks2">53 Tracks</string>
    <string name="playlist3">RnB</string>
    <string name="playlistTracks3">44 Tracks</string>
    <string name="playlist4">Gym Music</string>
    <string name="playlistTracks4">23 Tracks</string>
    <string name="playlist5">Mood</string>
    <string name="playlistTracks5">23 Tracks</string>
    <string name="playlist6">Ragae</string>
    <string name="playlistTracks6">17 Tracks</string>
    <string name="nowPlayingTrack">2Pac - Changes</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="previous">Previous</string>
    <string name="album_cover">Album Cover</string>
    <string name="track_name">Changes</string>
    <string name="Artist_Name">2Pac</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="the_big_picture">The Big Picture</string>
    <string name="big_l">Big L</string>
    <string name="one_in_a_million">One In A Million</string>
    <string name="aaliyah">Aaliyah</string>
    <string name="all_eyez_on_me">All Eyez On Me</string>
    <string name="_2pac">2Pac</string>
    <string name="life_after_death">Life After Death</string>
    <string name="the_notorious_big">The Notorious BIG</string>
    <string name="undisputed">Undisputed</string>
    <string name="dmx">DMX</string>
    <string name="the_chronic">The Chronic</string>
    <string name="dr_dre">Dr. Dre</string>
    <string name="stankonia">Stankonia</string>
    <string name="outkast">Outkast</string>
    <string name="_4_your_eyez_only">4 Your Eyez Only</string>
    <string name="j_cole">J. Cole</string>
    <string name="to_pimp_a_butterfly">To Pimp A Butterfly</string>
    <string name="kendrick_lamar">Kendrick Lamar</string>
    <string name="_1992">1992</string>
    <string name="the_game">The Game</string>
    <string name="laugh_now_cry_later">Laugh Now, Cry Later</string>
    <string name="ice_cube">Ice Cube</string>
    <string name="_4_44">4:44</string>
    <string name="jay_z">Jay Z</string>
    <string name="death_certificate">Death Certificate</string>
    <string name="damn">Damn</string>
    <string name="reincarnation">Reincarnation</string>
    <string name="snoop_dogg">Snoop Dogg</string>
    <string name="_6_albums_100_tracks">6 albums 100 tracks</string>
    <string name="_4_albums_53_tracks">4 albums 53 tracks</string>
    <string name="_1_album_13_tracks">1 album 13 tracks</string>
    <string name="eminem">Eminem</string>
    <string name="_5_albums_79_tracks">5 albums 79 tracks</string>
    <string name="_4_albums_71_tracks">4 albums 71 tracks</string>
    <string name="_18_albums_300_tracks">18 albums 300 tracks</string>
    <string name="the_notorious_b_i_g">The Notorious B.I.G.</string>
    <string name="_3_albums_64_tracks">3 albums 64 tracks</string>
    <string name="_1_album_16_tracks">1 album 16 tracks</string>
    <string name="_3_albums_48_tracks">3 albums 48 tracks</string>
    <string name="_3_albums_52_tracks">3 albums 52 tracks</string>
    <string name="_9_albums_129_tracks">9 albums 129 tracks</string>
    <string name="Payment_API">When the user taps the Android Pay button, the app requests MaskedWallet information. The Masked Wallet contains partial payment information such as billing address, shipping address, masked backing payment instrument number, and cart items.   Google returns a MaskedWallet response containing the user\'s wallet information. The app uses this information to present order review screens and other options. For example, the user might want to change their selected payment instrument or add a new shipping address.   To complete the order, the app requests the FullWallet.   Google passes back FullWallet information, which includes the detailed Android Pay payment credentials for the transaction.</string>
    <string name="shuffle_all">shuffle all</string>
    <string name="why_we_thugs">Why We Thugs</string>
    <string name="how_much_a_dollar_cost">How Much A Dollar Cost</string>
    <string name="thw_story_of_o_j">Thw Story of O.J.</string>
    <string name="the_way_i_am">The Way I Am</string>
    <string name="ambitionz_az_a_ridah">Ambitionz Az A Ridah</string>
    <string name="hypnotize">Hypnotize</string>
    <string name="_98_freestyle">\'98 Freestyle</string>
    <string name="fear">FEAR.</string>
    <string name="sucka_for_love">Sucka For Love</string>
    <string name="nuthin_but_a_g_thang">Nuthin\' But a \'G\' Thang</string>
    <string name="no_vaseline">No Vaseline</string>
    <string name="deja_vu">Deja Vu</string>
    <string name="payment_purpose">This activity is the Payment Activity.</string>
    <string name="playlist_purpose">This activity is the Playlist Activity.</string>
    <string name="tracks_purpose">This activity is the Tracks Activity.</string>
    <string name="albums_purpose">This activity is the Albums Activity.</string>
    <string name="artist_purpose">This activity is the Artists Activity.</string>
    <string name="now_playing_purpose">This activity is the Now Playing Activity.</string>
</resources>
