<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mPlayer"
            type="android.media.MediaPlayer"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context="com.example.allan.musicapplication.NowPlayingActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/tupac" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/track_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/Artist_Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/background"
                android:contentDescription="@string/shuffle"
                android:src="@drawable/shuffle" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/background"
                android:contentDescription="@string/previous"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/previous" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/background"
                android:contentDescription="@string/play"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/plat_fill" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/background"
                android:contentDescription="@string/next"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/next" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/background"
                android:contentDescription="@string/repeat"
                android:src="@drawable/repeat" />

        </LinearLayout>
    </LinearLayout>
</layout>