<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:showIn="@layout/activity_tracks">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playlist"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/playlist"
                android:src="@drawable/playlist" />

            <ImageButton
                android:id="@+id/tracks"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/tracks"
                android:src="@drawable/music_note" />

            <ImageButton
                android:id="@+id/albums"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/albums"
                android:src="@drawable/album" />

            <ImageButton
                android:id="@+id/artists"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/artists"
                android:src="@drawable/artist" />

            <ImageButton
                android:id="@+id/payment"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/payment"
                android:src="@drawable/payment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:id="@+id/view1"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:id="@+id/view2"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:id="@+id/view3"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:id="@+id/view4"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:id="@+id/view5"
                android:background="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>
</layout>